# atbs-python

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
exercises/: utils.py
exercises/ch_01/: perimeter_area_calculator.py  rectPrint.py  rect_print.py
